try fixing cutoff

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ h1 {
     position: absolute;
     background-color: white;
     /*min-width: 160px;*/
-    overflow: hidden;
+    /* overflow: hidden; */
+    overflow: visible;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     transition: max-height 0.5s ease-in-out;
